Fixed the pie chart overflow outside of its parent

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -31,3 +31,7 @@
 	font-size: clamp(2.4rem, 5vw, 3rem);
 	line-height: clamp(2.4rem, 5vw, 3rem);
 }
+
+.chart {
+	height: 40rem;
+}
